test/types/string/bradc/string2ints/badstring2int2.good
badstring2int2.chpl:3: error: Unexpected character when converting from string to int(64): 'a'
